--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "21f9584d-49ec-4a56-9cdc-11208064d60a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
